--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "uart-server"
-version = "0.1.0"
-authors = ["Carsten Elton Sorensen <csoren@gmail.com>"]
+version = "0.2.0"
+authors = ["quorum <micjph@protonmail.com"]
 edition = "2018"
 links = "ncursesw"
 build = "build.rs"
@@ -14,7 +14,7 @@ toml = "0.4.0"
 serde = "1.0"
 serde_derive = "1.0"
 dirs = "1.0.4"
-serialport = { path = "serialport-rs" }
+serialport = "4.0.0"
 num-traits = "0.2"
 num-derive = "0.3"
 
